--- a/profphd/1.0.42-1-deb/Dockerfile
+++ b/profphd/1.0.42-1-deb/Dockerfile
@@ -5,7 +5,7 @@ LABEL    software="profphd" \
     about.summary="secondary structure and solvent accessibility predictor" \ 
     about.home="http://predictprotein.org/" \ 
     software.version="1.0.42-1-deb" \ 
-    version="1" \ 
+    version="2" \ 
     about.copyright="" \ 
     about.license="GPL-2+" \ 
     about.license_file="/usr/share/doc/profphd/copyright" \ 
@@ -13,5 +13,6 @@ LABEL    software="profphd" \
     about.tags=""
 
 ENV DEBIAN_FRONTEND noninteractive
-RUN apt-get update && apt-get install -y profphd && apt-get clean && apt-get purge && rm -rf /var/lib/apt/lists/* /tmp/*
+RUN apt-get update && apt-get install -y profphd wget && apt-get clean && apt-get purge && rm -rf /var/lib/apt/lists/* /tmp/*
+RUN wget http://ftp.fr.debian.org/debian/pool/main/p/profphd/profphd_1.0.42-2_all.deb && dpkg -i profphd_1.0.42-2_all.deb && rm -f profphd_1.0.42-2_all.deb
 USER biodocker
