added link to GPL license, GPL license now in spdx format, added biotools entry, and cleaned up execution

--- a/danpos/2.2.2/Dockerfile
+++ b/danpos/2.2.2/Dockerfile
@@ -8,7 +8,8 @@ LABEL software.version="2.2.2"
 LABEL about.summary="A toolkit for Dynamic Analysis of Nucleosome and Protein Occupancy by Sequencing"
 LABEL about.home="https://sites.google.com/site/danposdoc/news"
 LABEL about.documentation="https://sites.google.com/site/danposdoc/home"
-LABEL about.license="GNU GPL v3"
+LABEL about.license="GPL-3.0"
+LABEL about.license_file="http://www.gnu.org/licenses/gpl-3.0.txt"
 LABEL extra.identifiers.biotools="https://bio.tools/danpos"
 LABEL about.tags="nucleosome"
 
@@ -17,12 +18,11 @@ MAINTAINER Nicholas Samuel Hill <nicholas.samuel.hill@gmail.com>
 WORKDIR /root
 
 RUN apt-get update && \
-  apt-get install -y \
+    apt-get install -y \
     python-setuptools \
     r-base \
     python-pip \
     python-dev \
-    bzip2 \
     python-rpy2 \
     liblzma-dev \
     wget
@@ -31,15 +31,16 @@ RUN wget https://sourceforge.net/projects/samtools/files/samtools/0.1.7/samtools
   tar -xvf download && \
   cd samtools-0.1.7_x86_64-linux && \
   chmod +x samtools && \
-  cp samtools /usr/local/bin/
- 
+  cp samtools /usr/local/bin/ && \
+  cd /root && \
+  rm -rf download
  
 RUN wget http://lilab.research.bcm.edu/dldcc-web/lilab/kaifuc/danpos/release/danpos-2.2.2.tgz && \
   tar -zxvf danpos-2.2.2.tgz && \
   chmod +x danpos-2.2.2/*.py && \
   cp danpos-2.2.2/*.py /usr/local/bin/ && \
   cd /root && \
-  rm -fr danpos-2.2.2.tgz danpos-2.2.2
+  rm -rf danpos-2.2.2.tgz danpos-2.2.2
   
 ENTRYPOINT ["danpos.py"]
 
