changed base image

--- a/danpos/2.2.2/Dockerfile
+++ b/danpos/2.2.2/Dockerfile
@@ -1,4 +1,6 @@
-FROM ubuntu:xenial
+################## BASE IMAGE ######################
+
+FROM biocontainers/biocontainers:latest
 
 # Metadata
 LABEL base_image="biocontainers:latest" \
