--- a/plip/1.3.3dfsg-1-deb/Dockerfile
+++ b/plip/1.3.3dfsg-1-deb/Dockerfile
@@ -6,6 +6,7 @@ LABEL    software="plip" \
     about.home="https://projects.biotec.tu-dresden.de/plip-web/plip/" \ 
     software.version="1.3.3dfsg-1-deb" \ 
     version="1" \ 
+    extra.identifiers.biotools="plip" \ 
     about.copyright="2016 Sebastian Salentin <sebastian.salentin@biotec.tu-dresden.de>" \ 
     about.license="Apache-2.0" \ 
     about.license_file="/usr/share/doc/plip/copyright" \ 
