update ncbi blast

--- a/ncbi-blast-plus-legacy/2.6.0-1-deb/Dockerfile
+++ b/ncbi-blast-plus-legacy/2.6.0-1-deb/Dockerfile
@@ -1,12 +1,12 @@
 FROM biocontainers/biocontainers:debian-stretch-backports
 MAINTAINER biocontainers <biodocker@gmail.com>
-LABEL    software="ncbi-blast+-legacy" \ 
+LABEL    software="ncbi-blast-plus-legacy" \ 
     container="ncbi-blast-plus-legacy" \ 
     about.summary="NCBI Blast legacy call script" \ 
     about.home="http://www.ncbi.nlm.nih.gov/IEB/ToolBox/CPP_DOC/" \ 
     software.version="2.6.0-1-deb" \ 
     version="1" \ 
-    about.license_file="/usr/share/doc/ncbi-blast+-legacy/copyright" \ 
+    about.license_file="/usr/share/doc/ncbi-blast-plus-legacy/copyright" \ 
     extra.binaries="/usr/bin/bl2seq,/usr/bin/blastall,/usr/bin/blastpgp,/usr/bin/fastacmd,/usr/bin/formatdb,/usr/bin/megablast,/usr/bin/rpsblast,/usr/bin/seedtop" \ 
     about.tags="field::biology, field::biology:bioinformatics, implemented-in::shell,:commandline, role::program, scope::utility" 
 
