update wise data

--- a/wise-data/2.4.1-19-deb/Dockerfile
+++ b/wise-data/2.4.1-19-deb/Dockerfile
@@ -6,7 +6,7 @@ LABEL    software="wise-data" \
     about.home="http://www.ebi.ac.uk/~birney/wise2/" \ 
     software.version="2.4.1-19-deb" \ 
     version="1" \ 
-    extra.identifiers.biotools="wise-data" \ 
+    extra.identifiers.biotools="wise" \ 
     about.copyright=" 1996-2001 Genome Research Limited (GRL) and" \ 
     about.license="GRL" \ 
     about.license_file="/usr/share/doc/wise-data/copyright" \ 
