--- a/blast/2.7.1/Dockerfile
+++ b/blast/2.7.1/Dockerfile
@@ -14,7 +14,7 @@ LABEL about.documentation="http://blast.ncbi.nlm.nih.gov/Blast.cgi?CMD=Web&PAGE_
 LABEL about.license_file="https://www.ncbi.nlm.nih.gov/IEB/ToolBox/CPP_DOC/lxr/source/scripts/projects/blast/LICENSE"
 LABEL about.license="SPDX:MIT"
 LABEL extra.identifiers.biotools="BLAST"
-LABEL about.tags="Genomics"
+LABEL about.tags="biology::format:aln, biology::peptidic, field::biology,:biology:bioinformatics, implemented-in::c,:commandline, role::program, scope::utility, use::searching,:plaintext, works-with::db"
 
 ################## MAINTAINER ######################
 
