Revert "Updated about.tags"
This reverts commit c68a43efd4085f198fb25b3aa1cc61239bc7daaa.

--- a/hmmer/3.2/Dockerfile
+++ b/hmmer/3.2/Dockerfile
@@ -13,7 +13,7 @@ LABEL about.home="http://hmmer.org/"
 LABEL about.documentation="http://hmmer.org/documentation.html"
 LABEL about.license="BSD-3-clause"
 LABEL extra.identifiers.biotools="hmmer3"
-LABEL about.tags="biology::format:aln, biology::peptidic, field::biology,:biology:bioinformatics, implemented-in::c,:commandline, role::program, scope::utility, use::searching,:plaintext, works-with::db"
+LABEL about.tags="Genomics"
 
 ################## MAINTAINER ######################
 
