Added missing about.license_file

--- a/hmmer/3.2/Dockerfile
+++ b/hmmer/3.2/Dockerfile
@@ -11,6 +11,7 @@ LABEL software.version="3.2"
 LABEL about.summary="Biosequence analysis using profile hidden Markov models"
 LABEL about.home="http://hmmer.org/"
 LABEL about.documentation="http://hmmer.org/documentation.html"
+LABEL about.license_file="/usr/share/doc/hmmer/copyright"
 LABEL about.license="BSD-3-clause"
 LABEL extra.identifiers.biotools="hmmer3"
 LABEL about.tags="Genomics"
