--- a/blast/2.7.1/Dockerfile
+++ b/blast/2.7.1/Dockerfile
@@ -18,7 +18,7 @@ LABEL about.tags="Genomics"
 
 ################## MAINTAINER ######################
 
-MAINTAINER Fábio Madeira <fabiomadeira@me.com>
+MAINTAINER Fabio Madeira <fabiomadeira@me.com>
 
 ################## INSTALLATION ######################
 
