Fixed the License to Apache-2.0

--- a/ebi-webservice/1.0.0/Dockerfile
+++ b/ebi-webservice/1.0.0/Dockerfile
@@ -9,7 +9,7 @@ LABEL    base_image="ebi-wp:EBI Web Service" \
     software.version="1.0.0" \
     version="1" \
     about.copyright="Copyright EMBL-EBI 2018" \
-    about.license="GPL-3+" \
+    about.license="Apache-2.0" \
     about.license_file="/usr/src/ebi-webservice-clients/LICENSE" \
     about.tags="ebi" \
     extra.identifier.biotools="ebi_tools"
