--- a/coregenebuilder/1.0/Dockerfile
+++ b/coregenebuilder/1.0/Dockerfile
@@ -2,18 +2,14 @@ FROM ubuntu:16.04
 
 MAINTAINER Bertrand Neron <bneron@pasteur.fr>
 
-LABEL autogen="no" \ 
-    version="1" \
-	software="coregenebuilder" \ 
-	software.version="1.0" \ 
-	about.summary="CoreGeneBuilder can be used to extract a core genome (or a persistent genome) from a given set of bacterial genomes." \ 
-	about.home="https://github.com/C3BI-pasteur-fr/CoreGeneBuilder" \ 
-	base_image="ubuntu:16.04" \ 
+LABEL version="1" \
+    software="coregenebuilder" \ 
+    software.version="1.0" \ 
+    about.summary="CoreGeneBuilder can be used to extract a core genome (or a persistent genome) from a given set of bacterial genomes." \ 
+    about.home="https://github.com/C3BI-pasteur-fr/CoreGeneBuilder" \ 
+    base_image="ubuntu:16.04" \ 
     about.license="SPDX:GPL-3.0-only" \
-    ANNOT.Name="CoreGeneBuilder" \
-    ANNOT.Version="1.0" \
-    ANNOT.Description="CoreGeneBuilder can be used to extract a core genome (or a persistent genome) from a given set of bacterial genomes." \
-    ANNOT.Homepage="https://github.com/C3BI-pasteur-fr/CoreGeneBuilder" \
+    about.license_file="https://github.com/C3BI-pasteur-fr/CoreGeneBuilder/blob/master/COPYING" \ 
     ANNOT.Vendor="Institut Pasteur" \
     ANNOT.EDAM_Operation="['operation_2995', 'operation_0289', 'operation_0362', 'operation_0291']" \
     ANNOT.EDAM_Topic="['topic_0623']" \
