--- a/seq_crumbs/0.1.9/Dockerfile
+++ b/seq_crumbs/0.1.9/Dockerfile
@@ -46,7 +46,7 @@ CMD ["sff_extract"]
 # https://bioinf.comav.upv.es/seq_crumbs/install.html
 # https://docs.docker.com
 # Stack Overflow: https://stackoverflow.com/questions/1078524/how-to-specify-the-location-with-wget 
-# Léo Léopold Hertz: https://stackoverflow.com/users/54964/l%c3%a9o-l%c3%a9opold-hertz-%ec%a4%80%ec%98%81
+# Leo Leopold Hertz: https://stackoverflow.com/users/54964/l%c3%a9o-l%c3%a9opold-hertz-%ec%a4%80%ec%98%81
 # RichieHindle: https://stackoverflow.com/users/21886/richiehindle
 
 
