Revert "remove extra identifier"
This reverts commit 965a1fa183ad79618a21df7ea5ab3148c665e50f.

--- a/strelka/2.9.7/Dockerfile
+++ b/strelka/2.9.7/Dockerfile
@@ -13,6 +13,7 @@ LABEL about.home="https://github.com/Illumina/strelka"
 LABEL about.documentation="https://github.com/Illumina/strelka/blob/master/docs/userGuide/README.md"
 LABEL about.license_file="https://github.com/Illumina/strelka/blob/master/LICENSE.txt"
 LABEL about.license="SPDX:GPL-3.0"
+LABEL extra.identifiers.biotools="Strelka"
 LABEL about.tags="Genomics"
 
 ################## MAINTAINER ######################
