--- a/freebayes/1.2.0-1bpo91-deb/Dockerfile
+++ b/freebayes/1.2.0-1bpo91-deb/Dockerfile
@@ -1,6 +1,7 @@
 FROM biocontainers/biocontainers:debian-stretch-backports
 MAINTAINER biocontainers <biodocker@gmail.com>
 LABEL    software="freebayes" \ 
+    base_image="biocontainers/biocontainers:debian-stretch-backports" \
     container="freebayes" \ 
     about.summary="Bayesian haplotype-based polymorphism discovery and genotyping" \ 
     about.home="https://github.com/ekg/freebayes" \ 
