--- a/test-ci/0.0.2/Dockerfile
+++ b/test-ci/0.0.2/Dockerfile
@@ -3,15 +3,14 @@ FROM biocontainers/biocontainers:latest
 
 ################## METADATA ######################
 LABEL base_image="biocontainers:latest"
-LABEL version="2"
+LABEL version="1"
 LABEL software="testci"
 LABEL software.version="0.0.2"
 LABEL about.summary="A test container for internal testing"
 
 LABEL about.home="http://193.62.52.74/jenkins/"
-LABEL about.license="GPL-3.0-or-later"
-LABEL tags="test"
-
+LABEL about.license_file="gpl3+"
+LABEL about.tags="test"
 
 ################## MAINTAINER ######################
 MAINTAINER Olivier Sallou <olivier.sallou@irisa.fr>
