lowercase software name

--- a/fastqc/0.11.5/Dockerfile
+++ b/fastqc/0.11.5/Dockerfile
@@ -4,7 +4,7 @@ FROM biocontainers/biocontainers:latest
 ################## METADATA ######################
 LABEL base_image="biocontainers:latest"
 LABEL version="2"
-LABEL software="FASTQC"
+LABEL software="fastqc"
 LABEL software.version="0.11.5"
 LABEL about.summary="A quality control tool for high throughput sequence data."
 LABEL about.home="http://www.bioinformatics.babraham.ac.uk/projects/fastqc/"
