--- a/tophat/2.1.1/Dockerfile
+++ b/tophat/2.1.1/Dockerfile
@@ -1,9 +1,9 @@
-FROM biocontainers/biocontainers:latest
+FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################################### METADATA ######################  ######################
 
-LABEL base_image="biocontainers:latest"
-LABEL version="1"
+LABEL base_image="biocontainers:v1.0.0_cv4"
+LABEL version="2"
 LABEL software="tophat"
 LABEL software.version="2.1.1"
 LABEL about.summary="TopHat is a fast splice junction mapper for RNA-Seq reads"
