SOAPEC: Updated Dockerfile to use specific version of base image

--- a/soapec/2.03/Dockerfile
+++ b/soapec/2.03/Dockerfile
@@ -1,8 +1,8 @@
-FROM biocontainers/biocontainers:latest
+FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
-LABEL base_image="biocontainers:latest"
-LABEL version="1"
+LABEL base_image="biocontainers:v1.0.0_cv4"
+LABEL version="2"
 LABEL software="soapec"
 LABEL software.version="2.03"
 LABEL about.summary="A correction tool for SOAPdenovo"
