--- a/proteowizard/3_0_9740/Dockerfile
+++ b/proteowizard/3_0_9740/Dockerfile
@@ -1,9 +1,9 @@
 ################## BASE IMAGE ######################
-FROM biocontainers/biocontainers:latest
+FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
-LABEL base_image="biocontainers:latest"
-LABEL version="1"
+LABEL base_image="biocontainers:v1.0.0_cv4"
+LABEL version="2"
 LABEL software="ProteoWizard"
 LABEL software.version="3_0_9740"
 LABEL about.summary="tools and software libraries that facilitate proteomics data analysis"
