--- a/soapdenovo/240/Dockerfile
+++ b/soapdenovo/240/Dockerfile
@@ -1,9 +1,9 @@
 ################## BASE IMAGE ######################
-FROM biocontainers/biocontainers:latest
+FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
-LABEL base_image="biocontainers:latest"
-LABEL version="1"
+LABEL base_image="biocontainers:v1.0.0_cv4"
+LABEL version="2"
 LABEL software="soapdenovo"
 LABEL software.version="240"
 LABEL about.summary="a novel short-read assembly method that can build a de novo draft assembly for the human-sized genomes"
