--- a/strelka/2.9.7/Dockerfile
+++ b/strelka/2.9.7/Dockerfile
@@ -1,11 +1,11 @@
 ################## BASE IMAGE ######################
 
-FROM biocontainers/biocontainers:latest
+FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
 
-LABEL base_image="biocontainers:latest"
-LABEL version="1"
+LABEL base_image="biocontainers:v1.0.0_cv4"
+LABEL version="2"
 LABEL software="strelka"
 LABEL software.version="2.9.7"
 LABEL about.summary="Strelka calls somatic and germline small variants from mapped sequencing reads"
