BOWTIE2_2_2_9: Updated Dockerfile to use specific version of base image

--- a/bowtie2/2.2.9/Dockerfile
+++ b/bowtie2/2.2.9/Dockerfile
@@ -1,11 +1,11 @@
 ################## BASE IMAGE ######################
 
-FROM biocontainers/biocontainers:latest
+FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
 
-LABEL base_image="biocontainers:latest"
-LABEL version="1"
+LABEL base_image="biocontainers:v1.0.0_cv4"
+LABEL version="2"
 LABEL software="bowtie2"
 LABEL software.version="2.2.9"
 LABEL about.summary="an ultrafast memory-efficient short read aligner"
