--- a/bowtie2/2.2.8/Dockerfile
+++ b/bowtie2/2.2.8/Dockerfile
@@ -1,9 +1,9 @@
 ################## BASE IMAGE ######################
-FROM biocontainers/biocontainers:latest
+FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
-LABEL base_image="biocontainers:latest"
-LABEL version="1"
+LABEL base_image="biocontainers:v1.0.0_cv4"
+LABEL version="2"
 LABEL software="bowtie2"
 LABEL software.version="2.2.8"
 LABEL about.summary="an ultrafast memory-efficient short read aligner"
