--- a/proteinprophet/201510131012/Dockerfile
+++ b/proteinprophet/201510131012/Dockerfile
@@ -1,9 +1,9 @@
 ################## BASE IMAGE ######################
-FROM biocontainers/biocontainers:latest
+FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
-LABEL base_image="biocontainers:latest"
-LABEL version="2"
+LABEL base_image="biocontainers:v1.0.0_cv4"
+LABEL version="3"
 LABEL software="ProteinProphet"
 LABEL software.version="201510131012"
 LABEL about.summary="Protein inference for MS/MS analysis"
