SSAHA2: Updated Dockerfile to use specific version of base image

--- a/ssaha2/2.5.5/Dockerfile
+++ b/ssaha2/2.5.5/Dockerfile
@@ -1,11 +1,11 @@
 ################## BASE IMAGE ######################
 
-FROM biocontainers/biocontainers:latest
+FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
 
-LABEL base_image="biocontainers:latest"
-LABEL version="1"
+LABEL base_image="biocontainers:v1.0.0_cv4"
+LABEL version="2"
 LABEL software="ssaha2"
 LABEL software.version="2.5.5"
 LABEL about.summary="SSAHA2 maps DNA sequencing reads onto a genomic reference sequence using a combination of word hashing and dynamic programming"
