--- a/pymol-jupiter/1.0.0/Dockerfile
+++ b/pymol-jupiter/1.0.0/Dockerfile
@@ -1,9 +1,9 @@
 ################## BASE IMAGE ######################
-FROM biocontainers/biocontainers:latest
+FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
-LABEL base_image="biocontainers:latest"
-LABEL version="1"
+LABEL base_image="biocontainers:v1.0.0_cv4"
+LABEL version="2"
 LABEL software="PyMol-Jupyter"
 LABEL software.version="1.0.0"
 LABEL about.summary="a portable way of interacting with PyMol via Jupyter notebook"
