GCTA: Updated Dockerfile to use specific version of base image

--- a/gcta/1.24.7/Dockerfile
+++ b/gcta/1.24.7/Dockerfile
@@ -1,10 +1,10 @@
 ############################# Dockerfile ####################################
-FROM biocontainers/biocontainers:latest
+FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ######################## METADATA ###########################################
 
-LABEL base_image="biocontainers:latest"
-LABEL version="1"
+LABEL base_image="biocontainers:v1.0.0_cv4"
+LABEL version="2"
 LABEL software="gcta"
 LABEL software.version="1.24.7"
 LABEL about.summary="A tool for Genome-wide Complex Trait Analysis"
