ZORRO: Updated Dockerfile to use specific version of base image

--- a/zorro/1.0.0/Dockerfile
+++ b/zorro/1.0.0/Dockerfile
@@ -1,10 +1,10 @@
 ################## BASE IMAGE ######################
-FROM biocontainers/biocontainers:latest
+FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
 
-LABEL base_image="biocontainers:latest"
-LABEL version="1.0"
+LABEL base_image="biocontainers:v1.0.0_cv4"
+LABEL version="2"
 LABEL software="Zorro"
 LABEL software.version="1.0.0"
 LABEL about.summary="A probabilistic alignment masking program"
