FASTXTOOLS: Updated Dockerfile to use specific version of base image

--- a/fastxtools/0.0.14/Dockerfile
+++ b/fastxtools/0.0.14/Dockerfile
@@ -1,9 +1,9 @@
 ################## BASE IMAGE ######################
-FROM biocontainers/biocontainers:latest
+FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
-LABEL base_image="biocontainers:latest"
-LABEL version="1"
+LABEL base_image="biocontainers:v1.0.0_cv4"
+LABEL version="2"
 LABEL software="FASTX-Toolkit"
 LABEL software.version="0.0.14"
 LABEL about.summary="a collection of command line tools for Short-Reads FASTA/FASTQ files preprocessing"
