--- a/bcftools/1.5/Dockerfile
+++ b/bcftools/1.5/Dockerfile
@@ -1,11 +1,11 @@
 ################## BASE IMAGE ######################
 
-FROM biocontainers/biocontainers:latest
+FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
 
-LABEL base_image="biocontainers:latest"
-LABEL version="1"
+LABEL base_image="biocontainers:v1.0.0_cv4"
+LABEL version="2"
 LABEL software="bcftools"
 LABEL software.version="1.5"
 LABEL about.summary="Bcftools is a program for variant calling and manipulating VCFs and BCFs"
