--- a/msgfp/9949/Dockerfile
+++ b/msgfp/9949/Dockerfile
@@ -1,10 +1,10 @@
 ################## BASE IMAGE ######################
-FROM biocontainers/biocontainers:latest
+FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
 
-LABEL base_image="biocontainers:latest"
-LABEL version="2"
+LABEL base_image="biocontainers:v1.0.0_cv4"
+LABEL version="3"
 LABEL software="MSGF+"
 LABEL software.version="9949"
 LABEL about.summary="MS/MS database search tool"
