--- a/toppas/1.11.1-3/Dockerfile
+++ b/toppas/1.11.1-3/Dockerfile
@@ -1,9 +1,9 @@
 ################## BASE IMAGE ######################
-FROM biocontainers/biocontainers:latest
+FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
-LABEL base_image="biocontainers:latest"
-LABEL version="2"
+LABEL base_image="biocontainers:v1.0.0_cv4"
+LABEL version="3"
 LABEL software="TOPPAS"
 LABEL software.version="1.11.1-3"
 LABEL about.summary="a graphical workflow editor for the analysis of high-throughput proteomics data"
