FRC_ALIGN: Updated Dockerfile to use specific version of base image

--- a/frc_align/20150723/Dockerfile
+++ b/frc_align/20150723/Dockerfile
@@ -1,10 +1,10 @@
 ################## BASE IMAGE ######################
 
-FROM biocontainers/biocontainers:latest
+FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
-LABEL base_image="biocontainers:latest"
-LABEL version="1"
+LABEL base_image="biocontainers:v1.0.0_cv4"
+LABEL version="2"
 LABEL software="frc_align"
 LABEL software.version="20150723"
 LABEL about.summary="Computes FRC from SAM/BAM file and not from afg files"
