--- a/blast/2.2.31/Dockerfile
+++ b/blast/2.2.31/Dockerfile
@@ -1,11 +1,11 @@
 ################## BASE IMAGE ######################
 
-FROM biocontainers/biocontainers:latest
+FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
 
-LABEL base_image="biocontainers:latest"
-LABEL version="1"
+LABEL base_image="biocontainers:v1.0.0_cv4"
+LABEL version="2"
 LABEL software="NCBI BLAST+"
 LABEL software.version="2.2.31"
 LABEL about.summary="basic local alignment search tool"
