CRUX: Updated Dockerfile to use specific version of base image

--- a/crux/2.1/Dockerfile
+++ b/crux/2.1/Dockerfile
@@ -1,9 +1,9 @@
 ################## BASE IMAGE ######################
-FROM biocontainers/biocontainers:latest
+FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
-LABEL base_image="biocontainers:latest"
-LABEL version="2"
+LABEL base_image="biocontainers:v1.0.0_cv4"
+LABEL version="3"
 LABEL software="crux"
 LABEL software.version="2.1"
 LABEL about.summary="a software toolkit for tandem mass spectrometry analysis"
