--- a/gapcloser/1.12-r6/Dockerfile
+++ b/gapcloser/1.12-r6/Dockerfile
@@ -1,10 +1,10 @@
 ################## BASE IMAGE ######################
 
-FROM biocontainers/biocontainers:latest
+FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
-LABEL base_image="biocontainers:latest"
-LABEL version="1"
+LABEL base_image="biocontainers:v1.0.0_cv4"
+LABEL version="2"
 LABEL software="gapcloser"
 LABEL software.version="1.12-r6"
 LABEL about.summary="A novel short-read assembly method that can build a de novo draft assembly for the human-sized genomes"
