--- a/telescoper/1.0.0/Dockerfile
+++ b/telescoper/1.0.0/Dockerfile
@@ -1,9 +1,9 @@
 ################## BASE IMAGE ######################
-FROM biocontainers/biocontainers:latest
+FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
-LABEL base_image="biocontainers:latest"
-LABEL version="1"
+LABEL base_image="biocontainers:v1.0.0_cv4"
+LABEL version="2"
 LABEL software="telescoper"
 LABEL software.version="1.0.0"
 LABEL about.summary="De novo Assembly of Highly Repetitive Regions"
