DIA_UMPIRE_2_1_2: Updated Dockerfile to use specific version of base image

--- a/dia-umpire/2.1.2/Dockerfile
+++ b/dia-umpire/2.1.2/Dockerfile
@@ -1,9 +1,9 @@
 ################## BASE IMAGE ######################
-FROM biocontainers/biocontainers:latest
+FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
-LABEL base_image="biocontainers:latest"
-LABEL version="3"
+LABEL base_image="biocontainers:v1.0.0_cv4"
+LABEL version="4"
 LABEL software="DIA-Umpire"
 LABEL software.version="2.1.2"
 LABEL about.summary="computational analysis of data independent acquisition (DIA) mass spectrometry-based proteomics data"
