--- a/tpp/5.0/Dockerfile
+++ b/tpp/5.0/Dockerfile
@@ -1,9 +1,9 @@
 ################## BASE IMAGE ######################
-FROM biocontainers/biocontainers:latest
+FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
-LABEL base_image="biocontainers:latest"
-LABEL version="3"
+LABEL base_image="biocontainers:v1.0.0_cv4"
+LABEL version="4"
 LABEL software="TPP"
 LABEL software.version="5.0"
 LABEL about.summary="a collection of integrated tools for MS/MS proteomics"
