--- a/mafft/7.394/Dockerfile
+++ b/mafft/7.394/Dockerfile
@@ -1,9 +1,9 @@
 ################## BASE IMAGE ######################
-FROM biocontainers/biocontainers:latest
+FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
-LABEL base_image="biocontainers:latest"
-LABEL version="1"
+LABEL base_image="biocontainers:v1.0.0_cv4"
+LABEL version="2"
 LABEL software="mafft"
 LABEL software.version="7.394"
 LABEL about.summary="Multiple alignment program for amino acid or nucleotide sequences"
