--- a/htslib/1.2.1/Dockerfile
+++ b/htslib/1.2.1/Dockerfile
@@ -1,11 +1,11 @@
 ############################### Dockerfile ##################################
 
-FROM biocontainers/biocontainers:latest
+FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################################# METADATA ###################################
 
-LABEL base_image="biocontainers:latest"
-LABEL version="1"
+LABEL base_image="biocontainers:v1.0.0_cv4"
+LABEL version="2"
 LABEL software="htslib"
 LABEL software.version="1.2.1"
 LABEL about.summary="C library for high-throughput sequencing data formats"
