BAMTOOLS: Updated Dockerfile to use specific version of base image

--- a/bamtools/2.4.0/Dockerfile
+++ b/bamtools/2.4.0/Dockerfile
@@ -1,10 +1,10 @@
 ################## BASE IMAGE ######################
 
-FROM biocontainers/biocontainers:latest
+FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
-LABEL base_image="biocontainers:latest"
-LABEL version="2"
+LABEL base_image="biocontainers:v1.0.0_cv4"
+LABEL version="3"
 LABEL software="bamtools"
 LABEL software.version="2.4.0"
 LABEL about.summary="C++ API & command-line toolkit for working with BAM data"
